Update service test