@@ -16,8 +16,9 @@ import ru.cft.shift.lab.ledin.core.exception.InvalidKindException;
 import ru.cft.shift.lab.ledin.core.repository.DigitIntervalRepository;
 import ru.cft.shift.lab.ledin.core.repository.LetterIntervalRepository;
 import ru.cft.shift.lab.ledin.core.service.impl.IntervalServiceImpl;
+import ru.cft.shift.lab.ledin.core.utils.validation.IntervalValidate;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -25,6 +26,9 @@ public class IntervalServiceTest {
 
     @Mock
     private LetterIntervalRepository letterIntervalRepository;
+
+    @Mock
+    private IntervalValidate intervalValidate;
 
     @Mock
     private DigitIntervalRepository digitIntervalRepository;
@@ -86,50 +90,50 @@ public class IntervalServiceTest {
         });
     }
 
-
     @Test
-    void testMergeIntervalsDigits() {
-        List<IntervalDto<?>> intervalDtos = Arrays.asList(
-                new IntervalDto<>(1, 5),
-                new IntervalDto<>(6, 10)
-        );
+    public void testMergeIntervalsDigits() {
+        List<IntervalDto<?>> intervalDtos = List.of(new IntervalDto<>(1, 5), new IntervalDto<>(6, 10));
+        List<DigitInterval> mergedIntervals = List.of(new DigitInterval(1, 10));
 
-        List<DigitInterval> digitIntervals = Arrays.asList(
-                new DigitInterval(1, 5),
-                new DigitInterval(6, 10)
-        );
+        doNothing().when(intervalValidate).validateIntervalLength(intervalDtos);
+        doNothing().when(intervalValidate).validateIntervalDigit(intervalDtos);
+        doNothing().when(intervalValidate).validateIntervalBorder(anyInt(), anyInt());
+        when(digitIntervalRepository.saveAll(any())).thenReturn(mergedIntervals);
 
         intervalService.mergeIntervals("digits", intervalDtos);
 
-        verify(digitIntervalRepository, times(1)).saveAll(anyList());
+        verify(intervalValidate, times(1)).validateIntervalLength(intervalDtos);
+        verify(intervalValidate, times(1)).validateIntervalDigit(intervalDtos);
+        verify(intervalValidate, times(2)).validateIntervalBorder(anyInt(), anyInt());
+        verify(digitIntervalRepository, times(1)).saveAll(any());
     }
 
     @Test
-    void testMergeIntervalsLetters() {
-        List<IntervalDto<?>> intervalDtos = Arrays.asList(
-                new IntervalDto<>("a", "d"),
-                new IntervalDto<>("e", "h")
-        );
+    public void testMergeIntervalsLetters() {
+        List<IntervalDto<?>> intervalDto = List.of(new IntervalDto<>("a", "e"), new IntervalDto<>("f", "j"));
+        List<LetterInterval> mergedIntervals = List.of(new LetterInterval("a", "j"));
 
-        List<LetterInterval> letterIntervals = Arrays.asList(
-                new LetterInterval("a", "d"),
-                new LetterInterval("e", "h")
-        );
+        doNothing().when(intervalValidate).validateIntervalLength(intervalDto);
+        doNothing().when(intervalValidate).validateIntervalLetter(intervalDto);
+        doNothing().when(intervalValidate).validateIntervalBorder(anyString(), anyString());
+        when(letterIntervalRepository.saveAll(any())).thenReturn(mergedIntervals);
 
-        intervalService.mergeIntervals("letters", intervalDtos);
+        intervalService.mergeIntervals("letters", intervalDto);
 
-        verify(letterIntervalRepository, times(1)).saveAll(anyList());
+        verify(intervalValidate, times(1)).validateIntervalLength(intervalDto);
+        verify(intervalValidate, times(1)).validateIntervalLetter(intervalDto);
+        verify(intervalValidate, times(2)).validateIntervalBorder(anyString(), anyString());
+        verify(letterIntervalRepository, times(1)).saveAll(any());
     }
 
     @Test
-    void testMergeIntervalsInvalidKind() {
-        List<IntervalDto<?>> intervalDtos = Arrays.asList(
-                new IntervalDto<>(1, 5),
-                new IntervalDto<>(6, 10)
-        );
+    public void testMergeIntervalsInvalidKind() {
+        List<IntervalDto<?>> intervalDto = Collections.emptyList();
+        doNothing().when(intervalValidate).validateIntervalLength(intervalDto);
 
-        assertThrows(InvalidKindException.class, () -> {
-            intervalService.mergeIntervals("invalid", intervalDtos);
-        });
+        assertThrows(InvalidKindException.class, () -> intervalService.mergeIntervals("invalid", intervalDto));
+        verify(intervalValidate, times(1)).validateIntervalLength(intervalDto);
+        verify(digitIntervalRepository, never()).saveAll(any());
+        verify(letterIntervalRepository, never()).saveAll(any());
     }
 }
